# stemma

./: .gitignore  .scalafmt.conf  AGENTS.md  CLAUDE.md  MIGRATION.md  Makefile  README-cloud-deployment.md  README.md  build.sbt  docker-compose.yml  package-lock.json  samconfig.toml  stemma.graphson  template.yaml  tree
backend/: build.sbt  pyproject.toml
backend/project/: Versions.scala
backend/src/api/: build.sbt
backend/src/api_impl_restful/: build.sbt
backend/src/migration_lambda/: build.sbt
backend/src/stemma/apis/: request_handler.py
backend/src/stemma/apps/: auth.py  dispatch.py  lambda_main.py  rest_app.py  rest_main.py
backend/src/stemma/domain/: codec.py  errors.py  requests.py  responses.py
backend/src/stemma/seed/: kings_of_europe.py
backend/src/stemma/services/: auth_service.py  invite_tokens.py  kinship.py  photo_service.py  sessions.py  stemma_dfs.py  user_service.py
backend/src/stemma/storage/: schema.py  storage_service.py
backend/tests/: factories.py  test_auth_service.py  test_codec.py  test_invite_tokens.py  test_lambda_build.py  test_link_persons.py  test_person_photo.py  test_rest_app.py  test_sessions.py  test_stemma_dfs.py  test_storage_service.py  test_user_service.py
backend_py/: pyproject.toml
backend_py/migrations/: V1__initial_schema.sql
backend_py/src/stemma/apis/: request_handler.py
backend_py/src/stemma/apps/: bootstrap.py  lambda_main.py  migration_main.py  rest_app.py  rest_main.py
backend_py/src/stemma/domain/: _config.py  codec.py  errors.py  requests.py  responses.py  user.py
backend_py/src/stemma/storage/: effects.py  (+3 more)
backend_py/tests/: conftest.py  factories.py  test_codec.py  test_invite_tokens.py  test_person_photo.py  test_rest_app.py  test_stemma_dfs.py  test_storage_service.py  test_user_service.py
(+556 files in other folders)
