[project]
name = "stemma-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.32",
    "boto3>=1.35",
    "pydantic>=2.9",
    "cryptography>=43",
    "google-auth>=2.35",
    "python-dateutil>=2.9",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "moto[dynamodb,s3]>=5.0",
    "boto3-stubs[dynamodb]>=1.35",
    "ruff>=0.7",
    "pyright>=1.1.385",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stemma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
